# leshan_exe

./: .gitignore  01局域网需求说明书2026.01.docx  README.md  统计模块本地检查报告_后续修改.md
.github/workflows/: build-client-windows-portable.yml  build-server-windows.yml  build-windows.yml
boer-lan-client/: PERMISSION_GUIDE.md  README_CLIENT_UPDATE.md  index.html  package-lock.json  package.json  vite.config.js
boer-lan-client/scripts/: package-portable.ps1
boer-lan-client/src/: App.vue  main.js
boer-lan-client/src-tauri/: Cargo.toml  tauri.conf.json
boer-lan-client/src-tauri/src/: main.rs
boer-lan-client/src/api/: auth.js  device.js  employee.js  mock.js  pattern.js  request.js  statistics.js
boer-lan-client/src/components/: DeviceTreeFilter.vue  DeviceTreePanel.vue
boer-lan-client/src/i18n/: en-US.js  index.js  zh-CN.js
boer-lan-client/src/layouts/: MainLayout.vue
boer-lan-client/src/router/: index.js
boer-lan-client/src/store/: index.js
boer-lan-server/: .gitignore  README_SERVER.md  go.mod  go.sum  index.html  package-lock.json  package.json  test_password.go  vite.config.js
boer-lan-server/backend/: go.mod  go.sum
boer-lan-server/configs/: config.yaml
boer-lan-server/scripts/: build.bat  build.sh  dev-backend.mjs  full_test_data.sql  init.sql  package-portable.ps1  test_data.sql
boer-lan-server/src/: App.vue  main.js
boer-lan-server/src-tauri/: Cargo.toml  tauri.conf.json
boer-lan-server/src-tauri/icons/: icon.icns
boer-lan-server/src-tauri/src/: main.rs
docs/: offline-trial-license-design.md  server-architecture.md
新局域网/新局域网/: 说明.docx
(+84 files in other folders)
